# rag_project

./: .env  .gitignore  Dockerfile  README.md  Untitled.ipynb  attribute_info.py  chain.py  discord_app.py  metadata_field_info.py  pyproject.toml  query_constructor_prompt.py  readme.md  requirements.txt  requirements1.txt  rough.py  rough2.ipynb  streamlit_app.py
Benjamin_Cowen/: .env  1_benjamin_cowen_summarized.csv  benj_cowen_50_summaries.csv  benj_cowen_50_summaries_w_emb.csv  benj_cowen_50_summaries_w_emb.jsonl  benj_cowen_rag.ipynb
Bigquery_sql/: .env  gbqkey.json  gbqkey2.json  working.ipynb
RAG/: querying.ipynb
app/: chain.py  client.py  importing_modules.py  server.py
data/10_Coin_Gecko/: Coin_gecko.ipynb  Coin_gecko_latest.csv
data/11_Benjamin_Cowen/: 11_benj_cowen_upload.ipynb  benj_cowen_50_summaries_w_emb2.jsonl
data/1_crypto_news/: 1_crypto_news.ipynb  crypto.news.py  crypto_news_com.csv
data/2_coin_desk/: 2_coin_desk.ipynb  coin desk news.py  coin_desk_details.csv
data/3_cointelegraph/: 3_cointelegraph.ipynb  coin telegraph news.py  cointelegraph find urls.py
data/4_blockworks_website/: 4_blockworks_website.ipynb  blockworks find urls.py  blockworks news.py
data/5_coinbeareau_website/: 5_cb_website.ipynb  cb_website_w_emb.jsonl
data/6_Unchained/: 6_Unchained.ipynb  unchained_w_emb.jsonl
data/7_0x_Research/: 0x_research_w_emb.jsonl  7_0x_Research.ipynb
data/8_Bell_curve/: Bell_curve.ipynb
data/youtube/: .env  Crypto_youtubers_for_project.csv  claude_code.txt  latest_videos_of_each_youtuber.csv  metaprompt_opus.txt  videos.py  (+2 more)
(+26 files in other folders)
